--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="flex space-x-7">
                     <div>
                         <a href="#" class="flex items-center py-4 px-2">
-                            <span class="font-semibold text-gray-500 text-lg cursive">Sanvi & Shreya</span>
+                            <span class="font-semibold text-gray-500 text-lg cursive">Saanvi & Shreya</span>
                         </a>
                     </div>
                 </div>
